--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/api.js",
+    "start": "nodemon ./src/api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server": "^2.7.1",
     "graphql": "^14.4.2",
+    "nodemon": "^1.19.1",
     "pg": "^7.12.0"
   }
 }
