--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^2.7.1",
     "graphql": "^14.4.2",
     "nodemon": "^1.19.1",
-    "pg": "^7.12.0"
+    "pg": "^7.12.0",
+    "uuid": "^3.3.2"
   }
 }
