--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.7.1",
+    "express": "^4.17.1",
     "graphql": "^14.4.2",
     "nodemon": "^1.19.1",
     "pg": "^7.12.0",
