--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "apollo-client": "^2.6.3",
     "apollo-link": "^1.2.12",
     "apollo-link-http": "^1.5.15",
+    "apollo-link-ws": "^1.0.18",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.27",
     "core-js": "^2.6.5",
