--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,21 @@ services:
     volumes:
       - data:/var/lib/postgresql/data
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    environment:
+      - DB_HOST=db
+    ports:
+      - "4000:4000"
+    depends_on:
+      - db
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
 volumes:
   data:
